// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ClientApp]  Question Component should match snapshot with answer 1`] = `
<li
  className="CommentBox"
>
  <h1
    className="CommentBox__title mt--0 mb--0"
  />
  <h2
    className="CommentBox__title mt--0 mb--0"
    data-qa-sel="comment-box-title"
  >
    Question on 
    <span
      className="text-lowercase"
    >
      Consultation
    </span>
  </h2>
  <p>
    <strong>
      Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
    </strong>
  </p>
  <section
    role="form"
  >
    <form
      className="mb--0"
      onSubmit={[Function]}
    >
      <div
        className="form__group form__group--textarea mb--b"
      >
        <label
          className="form__label visually-hidden"
          htmlFor="Answer1007"
        >
          Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
        </label>
        <textarea
          className="form__input form__input--textarea"
          data-qa-sel="Comment-text-area"
          defaultValue="some answer text"
          disabled={false}
          id="Answer1007"
          onInput={[Function]}
        />
      </div>
      <span
        className="ml--0 mb--0 CommentBox__savedIndicator"
      >
        Saved
      </span>
      <button
        className="btn mr--0 mb--0 right"
        data-qa-sel="delete-comment-button"
        onClick={[Function]}
      >
        Delete
      </button>
    </form>
  </section>
</li>
`;

exports[`[ClientApp]  Question Component should match snapshot without answer 1`] = `
<li
  className="CommentBox"
>
  <h1
    className="CommentBox__title mt--0 mb--0"
  />
  <h2
    className="CommentBox__title mt--0 mb--0"
    data-qa-sel="comment-box-title"
  >
    Question on 
    <span
      className="text-lowercase"
    >
      Consultation
    </span>
  </h2>
  <p>
    <strong>
      Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
    </strong>
  </p>
  <section
    role="form"
  >
    <form
      className="mb--0"
      onSubmit={[Function]}
    >
      <div
        className="form__group form__group--textarea mb--b"
      >
        <label
          className="form__label visually-hidden"
          htmlFor="Answer-1"
        >
          Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
        </label>
        <textarea
          className="form__input form__input--textarea"
          data-qa-sel="Comment-text-area"
          disabled={false}
          id="Answer-1"
          onInput={[Function]}
        />
      </div>
    </form>
  </section>
</li>
`;
